Add googletest as a submodule
Also build and link it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,24 +8,43 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 set(LIB_NAME "cl_sphere")
 set(EXE_NAME "program")
+set(TEST_NAME "program_test")
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lib/googletest)
 
 # Find OpenCL include and libs
 find_path( OPENCL_INCLUDE_DIRS
   NAMES OpenCL/cl.h CL/cl.h
-  HINTS ../../../../include/ $ENV{AMDAPPSDKROOT}/include/
+  HINTS $ENV{AMDAPPSDKROOT}/include/
   )
 
 find_library( OPENCL_LIBRARIES
   NAMES OpenCL
-  HINTS ../../../../lib/ $ENV{AMDAPPSDKROOT}/lib
+  HINTS $ENV{AMDAPPSDKROOT}/lib
   PATH_SUFFIXES x86_64
   )
 
+# Find Google Test include and libs
+#find_path(GOOGLE_TEST_INCLUDE_DIRS
+#  NAMES gtest/gtest.h
+#  HINTS $ENV{GOOGLETESTROOT}/googletest/include/
+#  )
+#
+#find_library(GOOGLE_TEST_LIB
+#  NAMES gtest gmock
+#  HINTS ${CMAKE_CURRENT_SOURCE_DIR}/lib
+#  )
+
 include_directories(${OPENCL_INCLUDE_DIRS})
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
+include_directories(${gtest_SOURCE_DIR}/include)
+include_directories(${gmock_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_library(${LIB_NAME} SHARED "src/cl_sphere.cpp" "src/cl_platform.cpp" "src/cl_device.cpp")
 target_link_libraries(${LIB_NAME} ${OPENCL_LIBRARIES})
 
 add_executable(${EXE_NAME} "src/program.cpp")
 target_link_libraries(${EXE_NAME} ${LIB_NAME})
+
+add_executable(${TEST_NAME} "test/main.cpp")
+target_link_libraries(${TEST_NAME} ${LIB_NAME} gtest gmock pthread)
